--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,22 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<title>Oscar Barajas Tavares</title>
+	<title>Germán Cavani</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="robots" content="follow, index" />
 	<meta name="description"
-		content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-	<meta property="og:url" content="https://gndx.io" />
+		content="Web developer con conocimientos de HTML, CSS, Javascript, ReactJS, NextJS, Bootstrap, Git, Github, entre otros. En constante actualización y aprendizaje. Apasionado de las nuevas tecnologías." />
+	<meta property="og:url" content="https://gcavani.com" />
 	<meta property="og:type" content="website" />
-	<meta property="og:site_name" content="Oscar Barajas Tavares" />
+	<meta property="og:site_name" content="German Cavani" />
 	<meta property="og:description"
-		content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-	<meta property="og:title" content="Oscar Barajas Tavares" />
-	<meta property="og:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
+		content="Web developer con conocimientos de HTML, CSS, Javascript, ReactJS, NextJS, Bootstrap, Git, Github, entre otros. En constante actualización y aprendizaje. Apasionado de las nuevas tecnologías." />
+	<meta property="og:title" content="German Cavani" />
+	<meta property="og:image" content="https://i.imgur.com/uFBywHX.jpg" />
 	<meta property="og:locale" content="es_ES" />
-	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:title" content="Oscar Barajas Tavares" />
-	<meta name="twitter:description"
-		content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-	<meta name="twitter:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
-	<meta name="twitter:site" content="@gndx" />
-	<meta name="twitter:creator" content="@gndx" />
 	<link href="favicon.png" rel="icon" type="image/png" />
 	<script src="https://cdn.tailwindcss.com"></script>
+	<script src="../src/index.js"></script>
 </head>
 
 <body class="antialiased text-slate-400 bg-slate-900">
@@ -40,18 +34,16 @@
 
 					</p>
 				</div>
-				<div>
-					<img class="rounded-lg w-48" src="https://arepa.s3.amazonaws.com/oscar-barajas-gndx.png"
-						alt="Oscar Barajas Tavares" />
+				<div id="avatar">
+
 				</div>
 			</div>
 			<div class="border-t border-gray-200">
 				<div class="bg-gray-50 px-4 py-5 w-full flex space-x-0.5">
 					<div class="mt-1 text-sm text-gray-900">
-						Mexicano, actualmente viviendo en Colombia, trabajo como <b>Learning Engineer</b>
-						en Platzi, empresa dedicada a la educación online, padre del Bebeloper y un apasionado de la
-						enseñanza en
-						línea.
+						<div id="description">
+
+						</div>
 						<div class="mt-6 flex space-x-4">
 							<a href="https://platzi.com/p/gndx" target="_blank">
 								<svg class="w-6 h-6 cursor-pointer text-gray-400 hover:text-[#98CA3F] fill-current"
@@ -122,7 +114,7 @@
 				<main id="links">
 
 				</main>
-				
+
 			</div>
 		</div>
 	</div>
