--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,11 @@
 					<h1 class="text-xl leading-6 font-bold text-gray-900">
 
 					</h1>
-					<h2 class="text-sm leading-6 text-gray-500 -mt-1"></h2>
-					<p class="mt-1 max-w-2xl text-sm text-gray-500">
+					<h2 id="nickname" class="text-sm leading-6 text-gray-500 -mt-1"></h2>
+					<p id="titles" class="mt-1 max-w-2xl text-sm text-gray-500">
 
 					</p>
+					<p id="subtitles" class="mt-1 max-w-2xl text-sm text-gray-500 pr-1"></p>
 				</div>
 				<div id="avatar">
 
@@ -44,8 +45,8 @@
 						<div id="description">
 
 						</div>
-						<div class="mt-6 flex space-x-4">
-							<a href="https://platzi.com/p/gndx" target="_blank">
+						<div id="social" class="mt-6 flex justify-center  space-x-4"></div>
+						<!-- <a href="https://platzi.com/p/gndx" target="_blank">
 								<svg class="w-6 h-6 cursor-pointer text-gray-400 hover:text-[#98CA3F] fill-current"
 									viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
 									<title>Platzi</title>
@@ -108,7 +109,8 @@
 										d="M20.317 4.37a19.791 19.791 0 0 0-4.885-1.515a.074.074 0 0 0-.079.037c-.21.375-.444.864-.608 1.25a18.27 18.27 0 0 0-5.487 0a12.64 12.64 0 0 0-.617-1.25a.077.077 0 0 0-.079-.037A19.736 19.736 0 0 0 3.677 4.37a.07.07 0 0 0-.032.027C.533 9.046-.32 13.58.099 18.057a.082.082 0 0 0 .031.057a19.9 19.9 0 0 0 5.993 3.03a.078.078 0 0 0 .084-.028a14.09 14.09 0 0 0 1.226-1.994a.076.076 0 0 0-.041-.106a13.107 13.107 0 0 1-1.872-.892a.077.077 0 0 1-.008-.128a10.2 10.2 0 0 0 .372-.292a.074.074 0 0 1 .077-.01c3.928 1.793 8.18 1.793 12.062 0a.074.074 0 0 1 .078.01c.12.098.246.198.373.292a.077.077 0 0 1-.006.127a12.299 12.299 0 0 1-1.873.892a.077.077 0 0 0-.041.107c.36.698.772 1.362 1.225 1.993a.076.076 0 0 0 .084.028a19.839 19.839 0 0 0 6.002-3.03a.077.077 0 0 0 .032-.054c.5-5.177-.838-9.674-3.549-13.66a.061.061 0 0 0-.031-.03zM8.02 15.33c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.956-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.956 2.418-2.157 2.418zm7.975 0c-1.183 0-2.157-1.085-2.157-2.419c0-1.333.955-2.419 2.157-2.419c1.21 0 2.176 1.096 2.157 2.42c0 1.333-.946 2.418-2.157 2.418Z" />
 								</svg>
 							</a>
-						</div>
+						</div> -->
+
 					</div>
 				</div>
 				<main id="links">
@@ -117,10 +119,9 @@
 
 			</div>
 		</div>
-	</div>
-	<div class="flex-block max-w-xl p-4 md:pd-8 mx-auto mt-2 text-center">
-		Made with love in Colombia
-	</div>
+		<div class="flex-block max-w-xl p-4 md:pd-8 mx-auto mt-2 text-center">
+			Made with ❤ on Uruguay
+		</div>
 </body>
 
 </html>
