--- a/public/index.html
+++ b/public/index.html
@@ -120,7 +120,7 @@
 			</div>
 		</div>
 		<div class="flex-block max-w-xl p-4 md:pd-8 mx-auto mt-2 text-center">
-			Made with ❤ on Uruguay
+			Made with ❤ in Uruguay
 		</div>
 </body>
 
